--- a/temi.html
+++ b/temi.html
@@ -12,7 +12,7 @@
       <div class="log">
         <h1>BUSAYO'S</h1>
         <img
-          src="/imagess/fast-logistic-logo-icon-design-vector-22461687.webp"
+          src="./imagess/fast-logistic-logo-icon-design-vector-22461687.webp"
           alt=""
         />
         <h1>LOGISTICS</h1>
@@ -34,7 +34,7 @@
         </h3>
 
         <img
-          src="/imagess/safe-delivery-man-guy-courier-package-parcel-vector-35209162.webp"
+          src="./imagess/safe-delivery-man-guy-courier-package-parcel-vector-35209162.webp"
           alt=""
         />
       </div>
